kubernetes/ingress/microservice-routing/colors-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: colors-ingress
spec:
  rules:
  - host: colors.k8slab.playpit.net
    http:
      paths:
      - path: /aqua
        pathType: Prefix
        backend:
          service:
            name: aqua-svc
            port:
              number: 80
      - path: /maroon
        pathType: Prefix
        backend:
          service:
            name: maroon-svc
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: olive-svc
            port:
              number: 80
